test/Parse/swift3_warnings_swift4_errors_version_4.code
// RUN: %target-language-frontend -typecheck -verify -language-version 4 %s

protocol Operator {
  fn +(lhs: Self, rhs: Self) -> Self // expected-error {{operator '+' declared in protocol must be 'static'}}
}

fn foo(x: Int..., _: String) {} // expected-error {{a parameter following a variadic parameter requires a label}}

protocol P1 {}
protocol P2 {}

immutable x: protocol<> // expected-error {{'protocol<>' syntax has been removed; use 'Any' instead}}
immutable y: protocol<P1> // expected-error {{'protocol<...>' composition syntax has been removed and is not needed here}}}
immutable z: protocol<P1, P2> // expected-error {{'protocol<...>' composition syntax has been removed; join the type constraints using '&'}}

fn bar(f: @noescape () -> ()) {} // expected-error {{unknown attribute 'noescape'}}

fn baz(f: @autoclosure(escaping) () -> ()) {}
// expected-error @-1 {{cannot find type 'escaping' in scope}}
// expected-error @-2 {{unnamed parameters must be written with the empty name '_'}}
// expected-error @-3 {{expected ',' separator}}

prefix operator +++ {} // expected-error {{operator should no longer be declared with body}}
postfix operator +++ {} // expected-error {{operator should no longer be declared with body}}
infix operator +++ {} // expected-error {{operator should no longer be declared with body}}
infix operator +++* { // expected-error {{operator should no longer be declared with body; use a precedence group instead}}
  associativity right
}
